--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Foundation Starter Template</title>
     <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css"  />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css"  />  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css"  /> 
+    <link rel="stylesheet" href="/wickedpicker.min.css"  />
     
   </head>
   <body>
@@ -27,6 +28,7 @@
 <!-- Compressed JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
+    <script src="wickedpicker.min.js"></script>
    
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js" ></script>
