--- a/index.html
+++ b/index.html
@@ -15,12 +15,23 @@
     <h1>Hello, world!</h1>
     <div class="row">
       <div class="small-12">
+        <label>TIME WITH STEP</label>
         <input type="time" name="time" step="900">
       </div>
       <div class="small-12">
+        <label>TIME WICKED</label>
+        <input class="pickaday" type="text" name="time">
+      </div>
+      <div class="small-12">
+        <label>DATE HTML5</label>
         <input type="date" name="time">
       </div>
       <div class="small-12">
+        <label>DATE PICKADAY</label>
+        <input id="datepicker" type="date" name="time">
+      </div>
+      <div class="small-12">
+        <label>DATE TIME HTML5</label>
         <input type="datetime-local" name="time">
       </div>
     </div>
@@ -34,6 +45,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js" ></script>
     <script>
       $(document).foundation();
+      var picker = new Pikaday({ field: document.getElementById('datepicker') });
+      
+      $('.timepicker').wickedpicker();
     </script>
 
   </body>
