--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
     
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <div class="row">
-      <div class="small-12">
-        <label>TIME WITH STEP</label>
-        <input type="time" name="time" step="900">
-      </div>
-      <div class="small-12">
-        <label>TIME WICKED</label>
-        <input class="pickaday" type="text" name="time">
-      </div>
-      <div class="small-12">
-        <label>DATE HTML5</label>
-        <input type="date" name="time">
-      </div>
-      <div class="small-12">
-        <label>DATE PICKADAY</label>
-        <input id="datepicker" type="date" name="time">
-      </div>
-      <div class="small-12">
-        <label>DATE TIME HTML5</label>
-        <input type="datetime-local" name="time">
+    <div class="container">
+      <h1>Hello, world!</h1>
+      <div class="row">
+        <div class="small-12">
+          <label>TIME WITH STEP</label>
+          <input type="time" name="time" step="900">
+        </div>
+        <div class="small-12">
+          <label>TIME WICKED</label>
+          <input class="pickaday" type="text" name="time">
+        </div>
+        <div class="small-12">
+          <label>DATE HTML5</label>
+          <input type="date" name="time">
+        </div>
+        <div class="small-12">
+          <label>DATE PICKADAY</label>
+          <input id="datepicker" type="date" name="time">
+        </div>
+        <div class="small-12">
+          <label>DATE TIME HTML5</label>
+          <input type="datetime-local" name="time">
+        </div>
       </div>
     </div>
 
