--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </div>
         <div class="small-12">
           <label>TIME WICKED</label>
-          <input class="pickaday" type="text" name="time">
+          <input class="tmepicker" type="text" name="pickatime">
         </div>
         <div class="small-12">
           <label>DATE HTML5</label>
-          <input type="date" name="time">
+          <input type="date" name="date">
         </div>
         <div class="small-12">
           <label>DATE PICKADAY</label>
-          <input id="datepicker" type="date" name="time">
+          <input id="datepicker" type="date" name="pickadate">
         </div>
         <div class="small-12">
           <label>DATE TIME HTML5</label>
-          <input type="datetime-local" name="time">
+          <input type="datetime-local" name="datetime">
         </div>
       </div>
     </div>
