--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css"  />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css"  /> 
     <link rel="stylesheet" href="/wickedpicker.min.css"  />
-    
+    <style>
+      .container {
+        margin: auto;
+        width: 80%;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -21,7 +26,7 @@
         </div>
         <div class="small-12">
           <label>TIME WICKED</label>
-          <input class="tmepicker" type="text" name="pickatime">
+          <input class="timepicker" type="text" name="pickatime">
         </div>
         <div class="small-12">
           <label>DATE HTML5</label>
