--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <style>
       .container {
         margin: auto;
-        width: 80%;
+        width: 100%;
+        max-width: 800px;
+        
+        
       }
     </style>
   </head>
