--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css"  />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css"  /> 
-    <link rel="stylesheet" href="/wickedpicker.min.css"  />
+    <link rel="stylesheet" href="wickedpicker.min.css"  />
     <style>
       .container {
         margin: auto;
