--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
           <input type="time" name="time" step="900">
         </div>
         <div class="small-12">
-          <label>TIME WICKED</label>
+          <label>TIME WITH TIME PICKER</label>
+          <input class="timepicker" type="time" name="pickatime">
+        </div>
+        <div class="small-12">
+          <label>TEXT WITH TIME PICKER</label>
           <input class="timepicker" type="text" name="pickatime">
         </div>
         <div class="small-12">
