--- a/index.html
+++ b/index.html
@@ -65,15 +65,21 @@
       $('.timepicker').wickedpicker('time', 0);
       $('.timepicker2').wickedpicker('time', 1);
       
-      $(window).on('load.zf.mediaquery', function(evt, newSize, oldSize){
-        // Inital state small -> medium 
+      /*$(window).on('changed.zf.mediaquery', function(evt, newSize, oldSize){
+         Inital state small -> medium 
     console.log(Foundation.MediaQuery.current);
   if(newSize === 'small'){
     console.log('small size');
   }else if(oldSize === 'small'){
     console.log('medium size');
   } 
-}); 
+}); */
+      if( $('body').foundation('is', small) ){
+      console.log('small size');
+      }else if ($('body').foundation('is', medium)){
+      console.log('medium size');
+      }
+      ;
     </script>
 
   </body>
