--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script>
       $(document).foundation();
       
-      if( $("body").foundation('is', 'small only') ){
+      if( $('body').foundation('is', 'small') ){
       console.log('small size');
         $("#time").prop('type', 'time');
         $("#datepicker").prop('type', 'date');
