--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script>
       $(document).foundation();
       
-      if($('#element').foundation('is', 'small')){
+      if($('.container').foundation('is', 'small')){
       console.log('small size');
       };
       var picker = new Pikaday({ field: document.getElementById('datepicker') });
