--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="element" class="container">
-      <h1>Hello, world!</h1>
+      <h1>DEMO TIME AND DATE PICKER WITH HTML5 SUPPORT</h1>
       <div class="row">
 
         <div class="small-12">
